# detr

./: data.py  download-voc-dataset.sh  model.py  pyproject.toml  train.py  utils.py
config/: default.yaml
config/model/: detr-b.yaml  detr-h.yaml  detr-s.yaml  detr-t.yaml
